# gludd

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BASELINE.md  BUGS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Containerfile  GLM_IMPLEMENTATION_GUIDE.md  GLM_REMEDIATION_GUIDE.md  GLM_REMEDIATION_GUIDE_2.md  GLM_REMEDIATION_GUIDE_3.md  LICENSE  Makefile  Makefile.diag  README.md  SECURITY.md  SESSION.md  TASKS.md  THIRD_PARTY_LICENSES.md  alembic.ini  ansible.cfg  gludd.spec  hottentot.spec  opencode.json  pyproject.toml
.github/workflows/: build.yml
.opencode/agent/: web-update.md
.opencode/plugin/: enforce-make.ts
.opencode/skills/guardrail-pattern/: SKILL.md
.opencode/skills/skills/: medium-antigravity-skills.md  medium-browser-use.md  medium-code-reviewer.md  medium-excalidraw.md  medium-frontend-design.md  medium-planetscale.md  (+16 more)
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_projects_and_project_id.py  003_add_plan_artifact.py  004_add_benchmark_tables.py
config/: general-ludd.yml  model_routing.yml  ratchet.yml
config/agents/: default_agents.yml
config/ansible/: isolation.yml
config/examples/: agent_config_example.yml  user_config_example.yml
config/infra/: azure-iam-policy.json  providers.yml
config/model_profiles/: anthropic_example.yml  deepseek_coder.yml  qwen_coder.yml  vllm_example.yml  zai_example.yml
config/opa/: config_policy.rego  config_policy_test.rego
config/openbao/: default.yml
config/skills/: codify_directive.md  return_review.md
config/tasks/: example_tasks.yml
docs/: architecture.md  azure-iam-setup.md  configuration.md  feature-parity-matrix.md  features-to-decide.md  history-scrub.md  model-setup.md  quickstart.md  sprint0.md
docs/internal/: feature-parity-matrix.md  sprint0.md  sprint1.md
molecule/mock_daemon/: server.py
playbooks/: action_policy_validate.yml  agent_coordination_demo.yml  ara_setup.yml  container_image_validate.yml  cosign_key_generate.yml  data_source_mount_audit.yml  dependency_update.yml  gap_analysis.yml  git_automate_change.yml  git_manage_worktree.yml  git_repo_init.yml  gitsign_configure.yml  log_audit.yml  molecule_coverage_audit.yml  molecule_test.yml  native_install_validate.yml  noop.yml  openbao_bootstrap.yml  openbao_image_update_scan.yml  pip_install_bundle.yml  prompt_eval.yml  quality_gate_validate.yml  release_artifacts_validate.yml  reload_harness.yml  return_review.yml  runtime_validate.yml  self_improve_harness.yml  slim_agent_container_build.yml  system_load_scrape.yml  system_report.yml  validate_task.yml
roles/audit_code/: README.md
roles/commit_and_pr/: README.md
roles/git_setup/: README.md
roles/lint_and_check/: README.md
roles/run_tests/: README.md
scripts/: audit_messages.py  bootstrap_skills.py  check_bundled_binaries.py  collect_prompts.py  db_schema.py  dogfood.py  download_bundled_binaries.py  extract_instruct_types.py  scan_tool_usage.py  search.py  skeleton.py  status_snapshot.py  verify_status.py
src/agentic_harness/: __init__.py  cli.py  daemon.py
src/general_ludd/: __init__.py  cli.py  daemon.py
templates/prompts/: code_review.md.j2  dependency_update.md.j2  documentation.md.j2  gap_analysis.md.j2  implementation.md.j2  log_audit.md.j2  prompt_eval.md.j2  return_review.md.j2  self_improvement.md.j2  test_creation.md.j2
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_agent_behavior_e2e.py  test_audit_gaps_e2e.py  test_cli_e2e.py  test_cli_full_coverage.py  test_context_planning_conversation.py  test_full_feature_e2e.py  test_hot_reload_e2e.py  test_mcp_integration.py  test_model_routing_budget.py  test_multi_project_isolation.py  test_new_features_e2e.py  test_obj01_skeleton.py  test_obj02_database.py  test_obj03_worker.py  test_obj04_event_loop.py  test_obj05_pid_rules.py  test_obj06_return_review.py  test_obj07_model_gateway.py  test_obj08_dependency.py  test_obj09_secrets.py  test_obj10_git.py  test_obj11_policy_ara.py  test_obj12_quality_molecule.py  test_obj13_validation_audit.py  test_obj14_self_improve_reload.py  test_obj15_runtime_packaging.py  test_obj16_dogfood_loop.py  test_skills_integration.py  test_sprint1_e2e.py  test_todos_persistence.py  test_tui_daemon_start.py  test_tui_e2e.py  test_tui_subprocess.py
tests/integration/: __init__.py  test_daemon_lifespan.py  test_enhanced_status_real.py  test_full_pipeline_e2e.py  test_hf_model_integration.py  test_local_inference_integration.py  test_messages_and_facts_api.py  test_molecule_coverage.py  test_multi_project_integration.py  test_playbook_registry.py  test_sprint1_integration.py  test_w3_14_single_project_per_tick.py  test_w3_2_reviewer_wiring.py  test_w3_7_self_improve_persist.py  test_w8_roles_and_reports.py  test_worker_isolation.py
tests/live/: test_zai_identity.py  test_zai_live.py  test_zai_live_features.py
tests/security/: test_ci_workflow.py  test_dist_license_pack.py  test_opa.py  test_sast.py  test_sbom.py
tests/unit/: __init__.py  test___init__.py  test_action_policy.py  test_adaptive_routing.py  test_agent_behavior.py  test_agent_dispatcher_construction.py  test_agent_message_repo.py  test_agents.py  test_ansible_galaxy.py  test_ansible_manifest.py  test_ansible_runner.py  test_anti_stop_fuzz.py  test_anti_stop_guardrail.py  test_ara.py  test_audit_gap_fixes.py  test_auto_configurator.py  test_automated_bundle.py  test_benchmark_cli.py  test_benchmark_endpoints.py  test_benchmark_models.py  test_benchmark_repo.py  test_benchmark_repo_session_factory.py  test_binary_paths.py  test_binary_versions.py  test_bootstrap_coverage.py  test_bucket.py  test_budget_caps.py  test_budget_wiring.py  test_bundled_binaries.py  test_cli.py  test_cli_execution_coverage.py  test_code_complexity_endpoints.py  test_code_intel_adversarial.py  test_code_intelligence.py  test_completion_audit.py  test_completion_audit_wiring.py  test_complexity_scorer.py  test_compute_launch_and_remote_slurm.py  test_context_compaction.py  test_controllers.py  (+226 more)
tools/: check_molecule_coverage.py  check_quality_gates.py
(+480 files in other folders)
