[project]
name = "general-ludd-agent"
version = "0.1.0"
description = "General Ludd Agent — the black swan agentic coding system with Ansible runners and multi-model AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "General Ludd Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn-worker>=0.3.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "psutil>=6.0.0",
    "tenacity>=9.0.0",
    "ansible-core>=2.16.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "hvac>=2.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "requests>=2.32.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "huggingface-hub>=0.28.0",
    "langgraph>=0.2.0",
    "watchdog>=6.0.0",
    "fs>=2.4.0",
    "rich>=13.0.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest-ansible>=24.0.0",
    "molecule>=24.0.0",
    "ansible-lint>=24.0.0",
    "ansible-dev-tools>=24.0.0",
    "types-requests>=2.32.0",
    "types-psutil>=6.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pyinstaller>=6.0.0",
    "bandit>=1.8.0",
    "cyclonedx-py>=0.7.0",
    "pip-audit>=0.3.0",
]
local-inference = [
    "llama-cpp-python>=0.3.0",
    "vllm>=0.6.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[project.scripts]
gludd = "general_ludd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/general_ludd"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ansible.*", "hvac.*", "psycopg.*", "yaml.*", "tree_sitter.*", "tree_sitter_python.*", "huggingface_hub.*", "diskcache.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "general_ludd.ansible.core_runner"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["general_ludd"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
    "types-requests>=2.32.0",
    "types-psutil>=6.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pyinstaller>=6.0.0",
    "bandit>=1.8.0",
    "cyclonedx-py>=0.7.0",
    "pip-audit>=0.3.0",
    "molecule>=24.0.0",
    "ansible-lint>=24.0.0",
]
